<resources>
    <string name="app_name">OPSC7311_PROTOTYPEapp</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">TicTrac</string>
    <string name="nav_header_subtitle">user.tictrac@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_entries">Entries</string>
    <string name="menu_categories">Categories</string>
    <string name="menu_goals">Goals</string>
    <string name="menu_view">View Entries</string>
    <string name="menu_categories_view">View Categories</string>
    <string name="menu_graph_view">View Graph</string>
    <string name="menu_goals_view">View Goals</string>
</resources>