<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_entries"
            android:icon="@drawable/baseline_access_time_24"
            android:title="@string/menu_entries" />
        <item
            android:id="@+id/nav_categories"
            android:icon="@drawable/baseline_category_24"
            android:title="@string/menu_categories" />
        <item
            android:id="@+id/nav_goals"
            android:icon="@drawable/baseline_star_outline_24"
            android:title="@string/menu_goals" />
        <item
            android:id="@+id/nav_entries_view"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_view" />
        <item
            android:id="@+id/nav_categories_view"
            android:icon="@drawable/baseline_remove_red_eye_24"
            android:title="@string/menu_categories_view" />
    </group>
</menu>