<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.opsc7311_prototypeapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_entries"
        android:name="com.example.opsc7311_prototypeapp.ui.entries.EntriesFragment"
        android:label="@string/menu_entries"
        tools:layout="@layout/fragment_entries" />

    <fragment
        android:id="@+id/nav_categories"
        android:name="com.example.opsc7311_prototypeapp.ui.categories.CategoriesFragment"
        android:label="@string/menu_categories"
        tools:layout="@layout/fragment_categories" />

    <fragment
        android:id="@+id/nav_goals"
        android:name="com.example.opsc7311_prototypeapp.ui.goals.GoalsFragment"
        android:label="@string/menu_goals"
        tools:layout="@layout/fragment_goals" />

    <fragment
        android:id="@+id/nav_entries_view"
        android:name="com.example.opsc7311_prototypeapp.ui.view.ViewFragment"
        android:label="@string/menu_view"
        tools:layout="@layout/fragment_view" />
    <fragment
        android:id="@+id/nav_categories_view"
        android:name="com.example.opsc7311_prototypeapp.ui.categories_view.CategoriesViewFragment"
        android:label="@string/menu_categories_view"
        tools:layout="@layout/fragment_categories_view" />
</navigation>